fixed item text visibility

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class = "shopMenu" id = "shopMenu">
             <button onclick="buyPink()" class = "shopPink" id = "shopPink"> </button>
 
-             <p id="">5</p>
+             <p id="pinkText">5</p>
              <img src="images/Coin.png" alt="" class = "pinkImg" id = "pinkImg">
         </div>
 
