Added other item to shop (dog)

--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
         <div class = "shopMenu" id = "shopMenu">
             <button onclick="buyPink()" class = "shopPink" id = "shopPink"> </button>
 
-             <p id="pinkText">5</p>
-             <img src="images/Coin.png" alt="" class = "pinkImg" id = "pinkImg">
+            <p id="pinkText">5</p>
+            <img src="images/Coin.png" alt="" class = "pinkImg" id = "pinkImg">
+
+            <button onclick="buyDog()" class = "shopDog" id = "shopDog"></button>
+
+            <p id="dogText" class="dogText">10</p>
+            <img src="images/Coin.png" alt="" class = "dogImg" id = "dogImg">
         </div>
 
        <div class = "info" id = "info">
@@ -61,6 +66,8 @@
        </div>
 
        <img src = "images/bonsai.png" alt="" id = "bonsai" class = "bonsai">
+
+       <img src = "images/dog.png" alt="" id = "dog" class = "dog">
 
 
     </div>
